--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -1,5 +1,7 @@
+<Gradient width="100%" direction="to left" colors="#00A193, #1e5e59">
 <ActionBar class="action-bar long-action-bar">
-    <!-- 
+        
+           <!-- 
     Use the NavigationButton as a side-drawer button in Android because ActionItems are shown on the right side of the ActionBar
     -->
     <NavigationButton ios:visibility="collapsed" icon="res://menu" (tap)="onDrawerButtonTap()"></NavigationButton>
@@ -9,11 +11,12 @@
     <ActionItem icon="res://navigation/menu" android:visibility="collapsed" (tap)="onDrawerButtonTap()"
         ios.position="left">
     </ActionItem>
-    <Image src="res://logo" class="action-image"></Image>
+
+    <Image height="30" src="res://logo" class="action-image"></Image>
     
         <Label class="action-bar-title" text="Home"></Label>
-</ActionBar>
-
+    </ActionBar>
+</Gradient>
 <!--
 RadSideDrawer is a UI component part of the Progress NativeScript UI set of components.
 Learn more about the RadSideDrawer UI component and how it can be customized in this documentation article:
@@ -32,8 +35,22 @@ it shouldn't have any other siblings other than the <ActionBar> component.
     <!--
     Use the tkMainContent directive to display the content of the page when you have an app drawer.
     -->
-    <GridLayout class="page page-content" tkMainContent>
-        <Label class="page-icon fa" text="&#xf015;"></Label>
-        <Label class="page-placeholder" text="<!-- Page content goes here -->"></Label>
+    <GridLayout class="backgroundImg"  columns="*,*" rows="*,*" class="page page-content" tkMainContent>
+            <StackLayout class="item-container" col="0" row="0" >
+                <Image src="~/assets/imgs/records.png"></Image>
+                <Label text="Records" textWrap="true"></Label>
+            </StackLayout>
+            <StackLayout  class="item-container" col="1" row="0">
+                <Image src="~/assets/imgs/savings.png"></Image>
+                <Label text="Savings" textWrap="true"></Label>
+            </StackLayout>
+            <StackLayout class="item-container" class="item-container"  col="0" row="1">
+                <Image src="~/assets/imgs/transfers.png"></Image>
+                <Label text="Transfers" textWrap="true"></Label>
+            </StackLayout>
+            <StackLayout   class="item-container" col="1" row="1" >
+                <Image src="~/assets/imgs/wallet.png"></Image>
+                <Label text="Wallet" textWrap="true"></Label>
+            </StackLayout>
     </GridLayout>
 </RadSideDrawer>
