--- a/app/auth/login/login.component.html
+++ b/app/auth/login/login.component.html
@@ -5,7 +5,7 @@
     <TextField formControlName="email" row="2" class="bw-input m-t-10 m-b-10 m-l-15 m-r-15" hint="Email Address" keyboardType="email" autocorrect="false" autocapitalization="none"
    ></TextField>
 
-<TextField formControlName="password" row="3" class="bw-input m-t-10 m-b-10 m-l-15 m-r-15" hint="Password" secure="true" autocorrect="false" autocapitalization="none"
+<TextField (focus)="onPasswordFocus()" formControlName="password" row="3" class="bw-input m-t-10 m-b-10 m-l-15 m-r-15" hint="Password" secure="true" autocorrect="false" autocapitalization="none"
     ></TextField>
 
     
