added ios support

--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -36,31 +36,34 @@ it shouldn't have any other siblings other than the <ActionBar> component.
     Use the tkMainContent directive to display the content of the page when you have an app drawer.
     -->
     <GridLayout class="backgroundImg"  columns="*,*" rows="*,*" class="page page-content" tkMainContent>
-            <CardView class="cardStyle" elevation="40" radius="1" >         
-                <StackLayout class="item-container" col="0" row="0" >
-                    <Image src="~/assets/imgs/records.png"></Image>
-                    <Label text="Records" textWrap="true"></Label>
-                </StackLayout>
-            </CardView>
-            <CardView class="cardStyle" elevation="40" radius="1" >         
-                <StackLayout  class="item-container" col="1" row="0">
-                    <Image src="~/assets/imgs/savings.png"></Image>
-                    <Label text="Savings" textWrap="true"></Label>
-                </StackLayout>
-            </CardView>
 
-            <CardView class="cardStyle" elevation="40" radius="1" >          
-            <StackLayout class="item-container" class="item-container"  col="0" row="1">
+        <CardView  col="0" row="0" class=" cardStyle" elevation="40" radius="1" >                  
+        <StackLayout class="item-container" col="0" row="0" >
+            <Image src="~/assets/imgs/records.png"></Image>
+            <Label text="Records" textWrap="true"></Label>
+        </StackLayout>
+        </CardView>
+
+        <CardView col="1" row="0" class=" cardStyle" elevation="40" radius="1" >         
+            <StackLayout  class="item-container" >
+                <Image src="~/assets/imgs/savings.png"></Image>
+                <Label text="Savings" textWrap="true"></Label>
+            </StackLayout>
+        </CardView>
+
+        <CardView col="0" row="1"  class=" cardStyle" elevation="40" radius="1" >         
+            <StackLayout class="item-container" class="item-container" >
                 <Image src="~/assets/imgs/transfers.png"></Image>
                 <Label text="Transfers" textWrap="true"></Label>
             </StackLayout>
-            </CardView>
-
-            <CardView class="cardStyle" elevation="40" radius="1" >       
-            <StackLayout   class="item-container" col="1" row="1" >
+        </CardView>
+    
+        <CardView col="1" row="1"  class="cardStyle" elevation="40" radius="1" >         
+            <StackLayout   class="item-container" >
                 <Image src="~/assets/imgs/wallet.png"></Image>
                 <Label text="Wallet" textWrap="true"></Label>
             </StackLayout>
-            </CardView>
-    </GridLayout>
+            
+        </CardView>
+        </GridLayout>
 </RadSideDrawer>
