--- a/app/auth/login/login.component.html
+++ b/app/auth/login/login.component.html
@@ -1,39 +1,39 @@
-    
-<GridLayout [formGroup]="loginForm" class="form"  class="backgroundImg p-t-10 p-b-10 p-l-25 p-r-25" rows="120, 150, auto,auto,30, auto" col="*">
-    <Image row="1" height="100" src="res://greenlogo"></Image>
-
-    <TextField formControlName="email" row="2" class="bw-input m-t-10 m-b-10 m-l-15 m-r-15" hint="Email Address" keyboardType="email" autocorrect="false" autocapitalization="none"
-   ></TextField>
-
-<TextField (focus)="onPasswordFocus()" formControlName="password" row="3" class="bw-input m-t-10 m-b-10 m-l-15 m-r-15" hint="Password" secure="true" autocorrect="false" autocapitalization="none"
-    ></TextField>
-
-    
-    <Gradient  class="m-t-60 m-b-10 m-l-16 m-r-16"  row="5" 
-    direction="to left" colors="#00A193, #1e5e59">
-    
-        <Button 
-        borderColor="transparent" 
-        borderWidth="1" borderRadius='0' class="bw-btn" text="SIGN IN" (tap)="onSigninButtonTap()"></Button>
+      
+        <GridLayout [formGroup]="loginForm" class="form"  class="backgroundImg" rows="120, 150, auto,auto,30, auto,*, 50" col="*">
+            <Image ios:visibility="collapsed" row="1" height="100" src="res://greenlogo"></Image>
+            <Image android:visibility="collapsed" row="1" height="100" ios.src="res://assets/greenlogo"></Image>
         
-    </Gradient>
-    
-    
-</GridLayout>
-
-    <Gradient  verticalAlignment="bottom" 
-    direction="to left" colors="#00A193, #1e5e59">
+            <TextField formControlName="email" row="2" class="bw-input m-t-10 m-b-10 m-l-15 m-r-15" hint="Email Address" keyboardType="email" autocorrect="false" autocapitalization="none"
+           ></TextField>
         
-        <Label
-        pageTransition="slide"
-        [nsRouterLink]='["signup"]'
-        textAlignment="center"
-        color="#fff" 
-        width="100%"
-        padding="17"
-        verticalAlignment="bottom" 
-        text="Don't have an account? SIGN UP" textWrap="true"></Label>
+        <TextField (focus)="onPasswordFocus()" formControlName="password" row="3" class="bw-input m-t-10 m-b-10 m-l-15 m-r-15" hint="Password" secure="true" autocorrect="false" autocapitalization="none"
+            ></TextField>
         
-    
-    </Gradient>
- 
+            
+            <Gradient  class="m-t-60 m-b-10 m-l-16 m-r-16"  row="5" 
+            direction="to left" colors="#00A193, #1e5e59">
+            
+                <Button 
+                borderColor="transparent" 
+                borderWidth="1" borderRadius='0' class="bw-btn" text="SIGN IN" (tap)="onSigninButtonTap()"></Button>
+                
+            </Gradient>
+            
+            
+            
+                <Gradient  row="7" verticalAlignment="bottom" 
+                direction="to left" colors="#00A193, #1e5e59">
+                    
+                    <Label
+                    pageTransition="slide"
+                    [nsRouterLink]='["signup"]'
+                    textAlignment="center"
+                    color="#fff" 
+                    width="100%"
+                    padding="17"
+                    text="Don't have an account? SIGN UP" textWrap="true"></Label>
+                    
+                
+                </Gradient>
+             
+        </GridLayout>
