--- a/app/auth/signup/signup.component.html
+++ b/app/auth/signup/signup.component.html
@@ -3,7 +3,7 @@
 </ActionBar>
 
 
-    <GridLayout verticalAlign="center"  [formGroup]="signupForm" class="form" class="backgroundImg p-t-10 p-b-10 p-l-25 p-r-25" rows="60, auto, auto,auto, auto,auto,30, auto"
+    <GridLayout verticalAlign="center"  [formGroup]="signupForm"  class="backgroundImg form" rows="60, auto, auto,auto, auto,auto,30, auto"
         col="*">
         <Image row="1" height="100" src="res://greenlogo"></Image>
 
