--- a/app/shared/my-drawer/my-drawer.component.html
+++ b/app/shared/my-drawer/my-drawer.component.html
@@ -6,7 +6,7 @@ Feel free to customize layouts and components to change how your app drawer look
     <StackLayout row="0" class="sidedrawer-header">
         <Label class="sidedrawer-header-image fa" text="&#xf2bd;"></Label>
         <Label class="sidedrawer-header-brand" text="User Name"></Label>
-        <Label class="footnote" text="username@mail.com"></Label>
+        <Label class="footnote" text="greatness@gmail.com"></Label>
     </StackLayout>
 
     <ScrollView row="1">
