Added generic password

--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -67,6 +67,11 @@ it shouldn't have any other siblings other than the <ActionBar> component.
             <Image src="~/assets/imgs/wallet.png"></Image>
             <Label text="Wallet" textWrap="true"></Label>
         </StackLayout>
+
+                <StackLayout col="1" row="2" class="item-container">
+            <Image src="~/assets/imgs/wallet.png"></Image>
+            <Label text="Wallet" textWrap="true"></Label>
+        </StackLayout>
     
     </GridLayout>
 </RadSideDrawer>
