--- a/app/auth/login/login.component.html
+++ b/app/auth/login/login.component.html
@@ -1,7 +1,7 @@
 <GridLayout [formGroup]="loginForm" class="backgroundImg form" rows="120, 150, auto,auto,30, auto,*, 50" col="*">
     <Image row="1" height="100" src="res://greenlogo"></Image>
 
-    <TextField formControlName="email" row="2" class="bw-input m-t-10 m-b-10 m-l-15 m-r-15" hint="Email Address" keyboardType="email"
+    <TextField formControlName="user" row="2" class="bw-input m-t-10 m-b-10 m-l-15 m-r-15" hint="Username" keyboardType="email"
         autocorrect="false" autocapitalization="none"></TextField>
 
     <TextField (focus)="onPasswordFocus()" formControlName="password" row="3" class="bw-input m-t-10 m-b-10 m-l-15 m-r-15" hint="Password"
